--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiodns==2.0.0
-aiohttp==3.5.4
+aiohttp>=3.5.4
 async-timeout==3.0.1
 attrs==19.1.0
 certifi==2019.3.9
@@ -8,7 +8,6 @@ chardet==3.0.4
 colorama==0.4.1
 idna==2.8
 multidict==4.5.2
-pkg-resources==0.0.0
 pycares==3.0.0
 pycparser==2.19
 requests==2.22.0
